k8s/04-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beef-ingress
  namespace: beef-restaurant
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: beef.trungkienit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: beef-admin.trungkienit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-admin
                port:
                  number: 80
    - host: beef-api.trungkienit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 9000
    - host: beef-auth.trungkienit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
